session-6/order_service/order_service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: order-service
  namespace: coffee-shop
spec: 
  selector:
    app: order-pod
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
